feat: add user_id to answers
