# src/openapi_server/models/answer_db.py
@@ -18,10 +18,11 @@ import re  # noqa: F401
 import json
 
 
+from datetime import datetime
 from pydantic import BaseModel, ConfigDict, Field, StrictStr
-from typing import Any, ClassVar, Dict, List
+from typing import Any, ClassVar, Dict, List, Optional
+
 from src.openapi_server.models.pyobjectid import PyObjectId
-from src.openapi_server.models.answer import Answer
 
 try:
     from typing import Self
@@ -29,14 +30,23 @@ except ImportError:
     from typing_extensions import Self
 
 
-class QuestionnaireSubmission(BaseModel):
+class AnswerDB(BaseModel):
     """
-    QuestionnaireSubmission
+    AnswerDB
     """  # noqa: E501
 
-    questionnaire_id: PyObjectId = Field(default_factory=PyObjectId)
-    answers: List[Answer]
-    __properties: ClassVar[List[str]] = ["questionnaire_id", "answers"]
+    id: PyObjectId = Field(default_factory=PyObjectId, alias="_id")
+    question_id: PyObjectId
+    text: Optional[Any]
+    created_at: Optional[datetime] = None
+    user_id: StrictStr
+    __properties: ClassVar[List[str]] = [
+        "id",
+        "question_id",
+        "text",
+        "created_at",
+        "user_id",
+    ]
 
     model_config = {
         "populate_by_name": True,
@@ -55,7 +65,7 @@ class QuestionnaireSubmission(BaseModel):
 
     @classmethod
     def from_json(cls, json_str: str) -> Self:
-        """Create an instance of QuestionnaireSubmission from a JSON string"""
+        """Create an instance of AnswerDB from a JSON string"""
         return cls.from_dict(json.loads(json_str))
 
     def to_dict(self) -> Dict[str, Any]:
@@ -67,24 +77,22 @@ class QuestionnaireSubmission(BaseModel):
         * `None` is only added to the output dict for nullable fields that
           were set at model initialization. Other fields with value `None`
           are ignored.
+        * OpenAPI `readOnly` fields are excluded.
+        * OpenAPI `readOnly` fields are excluded.
         """
         _dict = self.model_dump(
             by_alias=True,
-            exclude={},
+            exclude={
+                "id",
+                "created_at",
+            },
             exclude_none=True,
         )
-        # override the default output from pydantic by calling `to_dict()` of each item in answers (list)
-        _items = []
-        if self.answers:
-            for _item in self.answers:
-                if _item:
-                    _items.append(_item.to_dict())
-            _dict["answers"] = _items
         return _dict
 
     @classmethod
     def from_dict(cls, obj: Dict) -> Self:
-        """Create an instance of QuestionnaireSubmission from a dict"""
+        """Create an instance of AnswerDB from a dict"""
         if obj is None:
             return None
 
@@ -93,12 +101,11 @@ class QuestionnaireSubmission(BaseModel):
 
         _obj = cls.model_validate(
             {
-                "questionnaire_id": obj.get("questionnaire_id"),
-                "answers": (
-                    [Answer.from_dict(_item) for _item in obj.get("answers")]
-                    if obj.get("answers") is not None
-                    else None
-                ),
+                "id": obj.get("id"),
+                "question_id": obj.get("question_id"),
+                "text": obj.get("text"),
+                "created_at": obj.get("created_at"),
+                "user_id": obj.get("user_id"),
             }
         )
         return _obj
